# cumulus-library-template

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  pyproject.toml
.github/workflows/: ci.yaml
cumulus-library-template/: manifest.toml
cumulus-library-template/template_study/: manifest.toml
cumulus_library_template/: manifest.toml
cumulus_library_template/builders/: conditions.py  count_conditions.py  count_encounters.py
cumulus_library_template/data/: encounter_class_valueset.parquet  encounter_class_valueset.tsv
cumulus_library_template/queries/: encounters.sql  meta_date.sql  meta_version.sql  patients.sql
cumulus_library_template/workflows/: counts.workflow  upload_encounter_class.toml  upload_encounter_class.workflow
docs/: example.md
tests/: conftest.py  test_study.py
tests/duckdb_data/: pyarrow_cache.parquet
